# MAGNA-FLOW

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETION.md  COMPLETION_CERTIFICATE.txt  CONTRIBUTING.md  DEPLOY.md  Dockerfile  INSTALL.md  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  upload_magna_flow.py
magna_flow/: __init__.py  version.py
magna_flow/control/: lflux_resolver.py
magna_flow/interface/: magna_flow_engine.py
magna_flow/neural/: causal_collocation.py  hpinn.py  loss_functions.py  mfno.py  ntk_rebalancer.py
magna_flow/physics/: dissipation_budget.py  elsasser_decomp.py  fluid_substrates.py  helmholtz_projector.py  magnetic_helicity.py  maxwell_stress.py  onsager_verifier.py
magna_flow/tracker/: mhd_state_tracker.py
magna_flow_engine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_hpinn.py  test_lflux.py  test_mfno.py  test_physics.py  test_tracker.py
